--- a/src/app/modules/recruitment/admin-dashboard/quiz/quiz.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/quiz/quiz.component.html
@@ -1,4 +1,4 @@
-<ngx-componentsheader actions="actions" [pageName]="pagetitle" [requiredButton]="[{name:'newQuiz', label:'Create New', icon: 'plus'}]" (buttonClick)="addQuiz()"></ngx-componentsheader>
+<ngx-componentsheader actions="actions" [pageName]="pagetitle" [requiredButton]="[{name:'newQuiz', label:'Create New', icon: 'plus'}]" (buttonClick)="addNewQuiz"></ngx-componentsheader>
 <nb-tabset style="background-color: #ffffff; padding: 10px;">
   <nb-tab tabTitle="Roles">
     <ngx-tableheader></ngx-tableheader>
