--- a/src/app/modules/auth/benefit/add-benefit/add-benefit.component.html
+++ b/src/app/modules/auth/benefit/add-benefit/add-benefit.component.html
@@ -98,7 +98,7 @@
                     <ngx-file-upload></ngx-file-upload>
                     <span>Icon should be in JPEG format</span>
                 </div>
-                <div *ngIf="selectedOption == 1">
+                <div *ngIf="selectedOption === 1">
                     <div class="form-group">
                         <!-- <label>Employee</label>
                         <ngx-employee-master-search (masterSubmitted)="employeesSelected($event)" [allowmultipleselection]="true">
